<resources>
    <string name="app_name">Aliviamente</string>
    <string name="textOlá">Olá,</string>
    <string name="textViewIntrodução">eu estou aqui para apoiar você em sua jornada em busca de bem-estar psicológico.</string>
    <string name="btn">Cadastro</string>
    <string name="textConta">Já possui uma conta?</string>
    <string name="textClique">Clique aqui!</string>
    <string name="login" translatable="false">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_continuar">Continuar</string>
    <string name="hint_email">Insira seu e-mail</string>
    <string name="hint_email2">E-mail</string>
    <string name="hint_password">Insira sua password</string>
    <string name="hint_password2">Password</string>
    <string name="hint_conf_password">Confimar password</string>
    <string name="esquecer_password">Esqueceu sua password?</string>
    <string name="paciente">Paciente</string>
    <string name="psicologo">Psicólogo</string>
    <string name="psiquiatra">Psiquiatra</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_dt_nascimento">Data de nascimento</string>
    <string name="tipo_user">Escolha o tipo de usuário:</string>
    <string name="hint_morada">Morada</string>
    <string name="hint_cod_postal">Código postal</string>
    <string name="select_image">Selecionar imagem</string>
    <string name="take_photo">Tirar foto</string>
    <string name="principal">Principal</string>
    <string name="sos">SOS</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="consultas">Consultas</string>
    <string name="espaco_psicologo">Espaço com seu psicólogo</string>
    <string name="campos_preenchidos">Todos os campos precisam ser preenchidos</string>
    <string name="campo_email">O campo e-mail está vazio</string>
    <string name="campo_password">O campo password está vazio</string>
    <string name="data_consulta">Data da consulta:</string>
    <string name="hora_consulta">Hora da consulta:</string>
    <string name="status" translatable="false">Status: </string>
    <string name="solicitacoes_consultas">Solicitações de consultas</string>
    <string name="suas_soli_cons">Suas solicitações de consultas</string>
    <string name="aprovar">Aprovar</string>
    <string name="espaco_paciente">Espaço com seu paciente</string>
    <string name="solicitacoes_apoio">Solicitações de apoio</string>
    <string name="sair">Sair</string>
    <string name="nova_consulta">Solicitar consulta</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cedula_profissional">Cédula Profissional</string>
    <string name="tipo_user_perfil">Tipo de Usuário</string>
    <string name="sem_consulta">Nenhuma consulta encontrada.</string>
    <string name="mensagem_sos">Você deu um passo importante. Estou aqui para ouvir e apoiar você neste momento. Respire fundo e saiba que
não está sozinho.</string>
    <string name="solicitar_apoio_sos">Fale com um psicólogo do SNS24 agora</string>
    <string name="chamada">Na chamada, selecione a opção 4</string>
    <string name="btn_voltar">Voltar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="idade">Idade</string>
    <string name="iniciar_chamada">Iniciar chamada</string>
    <string name="datalhes_paciente">Detalhes do paciente </string>
    <string name="seus_pacientse">Seus pacientes</string>
</resources>