<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".DadosPessoaisFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/texto_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="text"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/texto_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/hint_email2"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/texto_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/hint_password2"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/texto_conf_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/hint_conf_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/btn_boas_vindas"
            android:fontFamily="@font/k2d_thin"
            android:gravity="center"
            android:text="@string/btn_continuar"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />


    </LinearLayout>

</FrameLayout>