<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SOSFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:id="@+id/sos_card"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/card"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/k2d_thin"
                android:text="@string/mensagem_sos"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/k2d_bold"
                android:text="@string/solicitar_apoio_sos"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_chamada"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/btn_simples"
                android:text="@string/textClique"
                android:textColorLink="@color/white" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/k2d_thin"
                android:text="@string/chamada"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>